--- a/Tests/Controltest/Window2.xaml
+++ b/Tests/Controltest/Window2.xaml
@@ -142,11 +142,11 @@
         </DataGrid>
         <!--<Calendar/>-->
         <!--<hj:ListClock Margin="505,10,71.333,14" Height="400"/>-->
-        <hj:CalendarWithClock Margin="240,35,193.333,35"/>
+        <hj:CalendarWithClock Margin="200,90,573.333,30"/>
         <!--<hj:TextBox hj:TitleElement.Title="事件详情"  Text="1234" IsReadOnly="True" hj:BorderElement.Geometry="{StaticResource Rect2}"  Style="{StaticResource TextBoxExtend}" Margin="595,109,167.333,261" />-->
         <hj:DateTimePicker Margin="78,75,718.333,320" />
 
-        <Calendar  />
+        <Calendar Margin="435,75,278.333,40"  />
 
 
 
