--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -20,4 +20,5 @@
     <converter:Name2ImageSourceConverter  x:Key="Name2ImageSourceConverter"/>
     <converter:String2GeometryConverter x:Key="String2GeometryConverter"/>
     <converter:RectangleCircularConverter x:Key="RectangleCircularConverter"/>
+    <converter:HearderSelectAllVisibilityConverter x:Key="HearderSelectAllVisibilityConverter"/>
 </ResourceDictionary>
