--- a/src/Hjmos.BaseControls/Themes/Styles/Base/ComboBoxBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/ComboBoxBaseStyle.xaml
@@ -79,7 +79,7 @@
                 <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <Popup x:Name="PART_Popup" PlacementTarget="{Binding ElementName=toggleButton}" AllowsTransparency="true" Grid.ColumnSpan="2" IsOpen="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" Margin="1" PopupAnimation="{StaticResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Bottom">
-                <Border CornerRadius="{Binding Path=(hc:BorderElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" x:Name="dropDownBorder" MaxHeight="{TemplateBinding MaxDropDownHeight}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Background="{DynamicResource RegionBrush}">
+                <Border CornerRadius="{Binding Path=(hc:BorderElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" x:Name="dropDownBorder" MaxHeight="{TemplateBinding MaxDropDownHeight}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Background="{TemplateBinding Background}">
                     <ScrollViewer Margin="0,4" x:Name="DropDownScrollViewer">
                         <hc:SimplePanel RenderOptions.ClearTypeHint="Enabled">
                             <Canvas HorizontalAlignment="Left" Height="0" VerticalAlignment="Top" Width="0">
